--- a/Notebooks/dev.ipynb
+++ b/Notebooks/dev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -54,9 +54,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Nome do Pet    Status do Pet  \\\n",
+      "0  Procura-se dono  Procura-se dono   \n",
+      "1            Amora     Desaparecido   \n",
+      "2             Ozzy     Desaparecido   \n",
+      "3  Procura-se dono  Procura-se dono   \n",
+      "4  Procura-se dono  Procura-se dono   \n",
+      "5              BOB     Desaparecido   \n",
+      "\n",
+      "                                    Descrição do Pet  \\\n",
+      "0  @petsresgatadosctg3ulbra\\nGALPÃO ULBRA\\nPASTOR...   \n",
+      "1  Amora rosto largo, peludinha\\nCom orelhas cara...   \n",
+      "2           Ozzy atende pelo nome dele \\nrabo branco   \n",
+      "3  _gabrielagaray\\n51 99241 8317\\nSOGIPA\\nBem ido...   \n",
+      "4                  Fazer contaro com @ikojardim. SRD   \n",
+      "5  Bob é velhinho, deve ter em torno de 14 anos. ...   \n",
+      "\n",
+      "                              URL  \\\n",
+      "0  https://petsrs.com.br/pet/1839   \n",
+      "1  https://petsrs.com.br/pet/1840   \n",
+      "2  https://petsrs.com.br/pet/1841   \n",
+      "3  https://petsrs.com.br/pet/1842   \n",
+      "4  https://petsrs.com.br/pet/1843   \n",
+      "5  https://petsrs.com.br/pet/1844   \n",
+      "\n",
+      "                                       URL da Imagem  \n",
+      "0  https://d3grcwqt8cmtlx.cloudfront.net/Screensh...  \n",
+      "1  https://d3grcwqt8cmtlx.cloudfront.net/Screensh...  \n",
+      "2  https://d3grcwqt8cmtlx.cloudfront.net/ozzy_3db...  \n",
+      "3                                               None  \n",
+      "4  https://d3grcwqt8cmtlx.cloudfront.net/37_2d591...  \n",
+      "5                                               None  \n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from selenium import webdriver\n",
@@ -81,27 +119,173 @@
     "    soup = BeautifulSoup(page_html, 'html.parser')\n",
     "    \n",
     "    # Extrair detalhes do pet\n",
-    "    nome_pet = soup.find('h1', class_='text-h3').text.strip()\n",
-    "    abrigo = soup.find('div', class_='v-list-item-title', text='Abrigo').find_next_sibling('div').text.strip()\n",
-    "    mais_informacoes = soup.find('div', class_='v-card-title', text='Mais informações').find_next_sibling('div').text.strip()\n",
-    "    status = soup.find('div', class_='v-chip__content').text.strip()\n",
+    "    nome_pet = soup.find('div', class_='v-col-md-8').find('span').get_text(strip=True)\n",
     "    \n",
-    "    return {'Nome do Pet': nome_pet, 'Abrigo': abrigo, 'Mais Informações': mais_informacoes, 'Status': status}\n",
+    "    status_pet_tag = soup.find('div', class_='v-chip__content')\n",
+    "    status_pet = status_pet_tag.get_text(strip=True) if status_pet_tag else 'Não encontrado'\n",
+    "    \n",
+    "    descricao_pet_tag = soup.find('div', class_='v-alert__content')\n",
+    "    descricao_pet = descricao_pet_tag.get_text(strip=True) if descricao_pet_tag else 'Não encontrado'\n",
+    "    \n",
+    "    url_imagem = extrair_url_imagem(url)\n",
+    "    \n",
+    "    return {'Nome do Pet': nome_pet, 'Status do Pet': status_pet, 'Descrição do Pet': descricao_pet, 'URL': url, 'URL da Imagem': url_imagem}\n",
+    "\n",
+    "def extrair_url_imagem(url):\n",
+    "    # Configuração do Selenium para usar um driver do Chrome\n",
+    "    options = webdriver.ChromeOptions()\n",
+    "    options.add_argument('--headless')  # Para executar o Chrome em modo headless (sem interface gráfica)\n",
+    "    driver = webdriver.Chrome(options=options)\n",
+    "    \n",
+    "    # Carregar a página\n",
+    "    driver.get(url)\n",
+    "    \n",
+    "    # Obter o código HTML da página após a renderização completa\n",
+    "    page_html = driver.page_source\n",
+    "    \n",
+    "    # Fechar o driver do Selenium\n",
+    "    driver.quit()\n",
+    "    \n",
+    "    # Parsear o HTML com BeautifulSoup\n",
+    "    soup = BeautifulSoup(page_html, 'html.parser')\n",
+    "    \n",
+    "    # Encontrar a tag img com a classe v-img__img e extrair a URL da imagem\n",
+    "    img_tag = soup.find('img', class_='v-img__img')\n",
+    "    if img_tag:\n",
+    "        return img_tag['src']\n",
+    "    else:\n",
+    "        return None\n",
     "\n",
     "# Lista para armazenar os dados de cada pet\n",
     "dados_pets = []\n",
     "\n",
-    "# Varrendo os pets de 1800 a 1900\n",
-    "for pet_id in range(1800, 1901):\n",
+    "# Varrendo os pets de 1839 a 1845\n",
+    "for pet_id in range(1839, 1845):\n",
     "    url_pet = f'https://petsrs.com.br/pet/{pet_id}'\n",
     "    detalhes_pet = extrair_detalhes_pet(url_pet)\n",
-    "    detalhes_pet['URL'] = url_pet  # Adicionando a URL do pet aos detalhes\n",
     "    dados_pets.append(detalhes_pet)\n",
     "\n",
     "# Criando DataFrame com os dados dos pets\n",
     "df_pets = pd.DataFrame(dados_pets)\n",
     "\n",
     "print(df_pets)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Nome do Pet</th>\n",
+       "      <th>Status do Pet</th>\n",
+       "      <th>Descrição do Pet</th>\n",
+       "      <th>URL</th>\n",
+       "      <th>URL da Imagem</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Procura-se dono</td>\n",
+       "      <td>Procura-se dono</td>\n",
+       "      <td>@petsresgatadosctg3ulbra\\nGALPÃO ULBRA\\nPASTOR...</td>\n",
+       "      <td>https://petsrs.com.br/pet/1839</td>\n",
+       "      <td>https://d3grcwqt8cmtlx.cloudfront.net/Screensh...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Amora</td>\n",
+       "      <td>Desaparecido</td>\n",
+       "      <td>Amora rosto largo, peludinha\\nCom orelhas cara...</td>\n",
+       "      <td>https://petsrs.com.br/pet/1840</td>\n",
+       "      <td>https://d3grcwqt8cmtlx.cloudfront.net/Screensh...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ozzy</td>\n",
+       "      <td>Desaparecido</td>\n",
+       "      <td>Ozzy atende pelo nome dele \\nrabo branco</td>\n",
+       "      <td>https://petsrs.com.br/pet/1841</td>\n",
+       "      <td>https://d3grcwqt8cmtlx.cloudfront.net/ozzy_3db...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Procura-se dono</td>\n",
+       "      <td>Procura-se dono</td>\n",
+       "      <td>_gabrielagaray\\n51 99241 8317\\nSOGIPA\\nBem ido...</td>\n",
+       "      <td>https://petsrs.com.br/pet/1842</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Procura-se dono</td>\n",
+       "      <td>Procura-se dono</td>\n",
+       "      <td>Fazer contaro com @ikojardim. SRD</td>\n",
+       "      <td>https://petsrs.com.br/pet/1843</td>\n",
+       "      <td>https://d3grcwqt8cmtlx.cloudfront.net/37_2d591...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Nome do Pet    Status do Pet  \\\n",
+       "0  Procura-se dono  Procura-se dono   \n",
+       "1            Amora     Desaparecido   \n",
+       "2             Ozzy     Desaparecido   \n",
+       "3  Procura-se dono  Procura-se dono   \n",
+       "4  Procura-se dono  Procura-se dono   \n",
+       "\n",
+       "                                    Descrição do Pet  \\\n",
+       "0  @petsresgatadosctg3ulbra\\nGALPÃO ULBRA\\nPASTOR...   \n",
+       "1  Amora rosto largo, peludinha\\nCom orelhas cara...   \n",
+       "2           Ozzy atende pelo nome dele \\nrabo branco   \n",
+       "3  _gabrielagaray\\n51 99241 8317\\nSOGIPA\\nBem ido...   \n",
+       "4                  Fazer contaro com @ikojardim. SRD   \n",
+       "\n",
+       "                              URL  \\\n",
+       "0  https://petsrs.com.br/pet/1839   \n",
+       "1  https://petsrs.com.br/pet/1840   \n",
+       "2  https://petsrs.com.br/pet/1841   \n",
+       "3  https://petsrs.com.br/pet/1842   \n",
+       "4  https://petsrs.com.br/pet/1843   \n",
+       "\n",
+       "                                       URL da Imagem  \n",
+       "0  https://d3grcwqt8cmtlx.cloudfront.net/Screensh...  \n",
+       "1  https://d3grcwqt8cmtlx.cloudfront.net/Screensh...  \n",
+       "2  https://d3grcwqt8cmtlx.cloudfront.net/ozzy_3db...  \n",
+       "3                                               None  \n",
+       "4  https://d3grcwqt8cmtlx.cloudfront.net/37_2d591...  "
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_pets.head()"
    ]
   }
  ],
