--- a/Notebooks/dev_datawrapper.ipynb
+++ b/Notebooks/dev_datawrapper.ipynb
@@ -1,213 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://d3grcwqt8cmtlx.cloudfront.net/Screenshot_2024_05_07_08_27_08_942_com_facebook_katana_9b3686b694.jpg\n"
-     ]
-    }
-   ],
-   "source": [
-    "from selenium import webdriver\n",
-    "from bs4 import BeautifulSoup\n",
-    "import pandas as pd\n",
-    "\n",
-    "def extrair_url_imagem(url):\n",
-    "    # Configuração do Selenium para usar um driver do Chrome\n",
-    "    options = webdriver.ChromeOptions()\n",
-    "    options.add_argument('--headless')  # Para executar o Chrome em modo headless (sem interface gráfica)\n",
-    "    driver = webdriver.Chrome(options=options)\n",
-    "    \n",
-    "    # Carregar a página\n",
-    "    driver.get(url)\n",
-    "    \n",
-    "    # Obter o código HTML da página após a renderização completa\n",
-    "    page_html = driver.page_source\n",
-    "    \n",
-    "    # Fechar o driver do Selenium\n",
-    "    driver.quit()\n",
-    "    \n",
-    "    # Parsear o HTML com BeautifulSoup\n",
-    "    soup = BeautifulSoup(page_html, 'html.parser')\n",
-    "    \n",
-    "    # Encontrar a tag img com a classe v-img__img e extrair a URL da imagem\n",
-    "    img_tag = soup.find('img', class_='v-img__img')\n",
-    "    if img_tag:\n",
-    "        return img_tag['src']\n",
-    "    else:\n",
-    "        return None\n",
-    "\n",
-    "# URL da página do pet\n",
-    "url_pet = 'https://petsrs.com.br/pet/1840'\n",
-    "\n",
-    "# Extrair a URL da imagem\n",
-    "url_imagem = extrair_url_imagem(url_pet)\n",
-    "\n",
-    "print(url_imagem)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       Nome do Pet    Status do Pet  \\\n",
-      "0  Procura-se dono  Procura-se dono   \n",
-      "1            Amora     Desaparecido   \n",
-      "2             Ozzy     Desaparecido   \n",
-      "3  Procura-se dono  Procura-se dono   \n",
-      "4  Procura-se dono  Procura-se dono   \n",
-      "5              BOB     Desaparecido   \n",
-      "\n",
-      "                                    Descrição do Pet  \\\n",
-      "0  @petsresgatadosctg3ulbra\\nGALPÃO ULBRA\\nPASTOR...   \n",
-      "1  Amora rosto largo, peludinha\\nCom orelhas cara...   \n",
-      "2           Ozzy atende pelo nome dele \\nrabo branco   \n",
-      "3  _gabrielagaray\\n51 99241 8317\\nSOGIPA\\nBem ido...   \n",
-      "4                  Fazer contaro com @ikojardim. SRD   \n",
-      "5  Bob é velhinho, deve ter em torno de 14 anos. ...   \n",
-      "\n",
-      "                              URL  \\\n",
-      "0  https://petsrs.com.br/pet/1839   \n",
-      "1  https://petsrs.com.br/pet/1840   \n",
-      "2  https://petsrs.com.br/pet/1841   \n",
-      "3  https://petsrs.com.br/pet/1842   \n",
-      "4  https://petsrs.com.br/pet/1843   \n",
-      "5  https://petsrs.com.br/pet/1844   \n",
-      "\n",
-      "                                       URL da Imagem  \n",
-      "0  https://d3grcwqt8cmtlx.cloudfront.net/Screensh...  \n",
-      "1  https://d3grcwqt8cmtlx.cloudfront.net/Screensh...  \n",
-      "2  https://d3grcwqt8cmtlx.cloudfront.net/ozzy_3db...  \n",
-      "3                                               None  \n",
-      "4  https://d3grcwqt8cmtlx.cloudfront.net/37_2d591...  \n",
-      "5                                               None  \n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "from selenium import webdriver\n",
-    "from bs4 import BeautifulSoup\n",
-    "\n",
-    "def extrair_detalhes_pet(url):\n",
-    "    # Configuração do Selenium para usar um driver do Chrome\n",
-    "    options = webdriver.ChromeOptions()\n",
-    "    options.add_argument('--headless')  # Para executar o Chrome em modo headless (sem interface gráfica)\n",
-    "    driver = webdriver.Chrome(options=options)\n",
-    "    \n",
-    "    # Carregar a página\n",
-    "    driver.get(url)\n",
-    "    \n",
-    "    # Obter o código HTML da página após a renderização completa\n",
-    "    page_html = driver.page_source\n",
-    "    \n",
-    "    # Fechar o driver do Selenium\n",
-    "    driver.quit()\n",
-    "    \n",
-    "    # Parsear o HTML com BeautifulSoup\n",
-    "    soup = BeautifulSoup(page_html, 'html.parser')\n",
-    "    \n",
-    "    # Extrair detalhes do pet\n",
-    "    nome_pet = soup.find('div', class_='v-col-md-8').find('span').get_text(strip=True)\n",
-    "    \n",
-    "    status_pet_tag = soup.find('div', class_='v-chip__content')\n",
-    "    status_pet = status_pet_tag.get_text(strip=True) if status_pet_tag else 'Não encontrado'\n",
-    "    \n",
-    "    descricao_pet_tag = soup.find('div', class_='v-alert__content')\n",
-    "    descricao_pet = descricao_pet_tag.get_text(strip=True) if descricao_pet_tag else 'Não encontrado'\n",
-    "    \n",
-    "    url_imagem = extrair_url_imagem(url)\n",
-    "    \n",
-    "    return {'Nome do Pet': nome_pet, 'Status do Pet': status_pet, 'Descrição do Pet': descricao_pet, 'URL': url, 'URL da Imagem': url_imagem}\n",
-    "\n",
-    "def extrair_url_imagem(url):\n",
-    "    # Configuração do Selenium para usar um driver do Chrome\n",
-    "    options = webdriver.ChromeOptions()\n",
-    "    options.add_argument('--headless')  # Para executar o Chrome em modo headless (sem interface gráfica)\n",
-    "    driver = webdriver.Chrome(options=options)\n",
-    "    \n",
-    "    # Carregar a página\n",
-    "    driver.get(url)\n",
-    "    \n",
-    "    # Obter o código HTML da página após a renderização completa\n",
-    "    page_html = driver.page_source\n",
-    "    \n",
-    "    # Fechar o driver do Selenium\n",
-    "    driver.quit()\n",
-    "    \n",
-    "    # Parsear o HTML com BeautifulSoup\n",
-    "    soup = BeautifulSoup(page_html, 'html.parser')\n",
-    "    \n",
-    "    # Encontrar a tag img com a classe v-img__img e extrair a URL da imagem\n",
-    "    img_tag = soup.find('img', class_='v-img__img')\n",
-    "    if img_tag:\n",
-    "        return img_tag['src']\n",
-    "    else:\n",
-    "        return None\n",
-    "\n",
-    "# Lista para armazenar os dados de cada pet\n",
-    "dados_pets = []\n",
-    "\n",
-    "# Varrendo os pets de 1839 a 1845\n",
-    "for pet_id in range(1839, 1845):\n",
-    "    url_pet = f'https://petsrs.com.br/pet/{pet_id}'\n",
-    "    detalhes_pet = extrair_detalhes_pet(url_pet)\n",
-    "    dados_pets.append(detalhes_pet)\n",
-    "\n",
-    "# Criando DataFrame com os dados dos pets\n",
-    "df_pets = pd.DataFrame(dados_pets)\n",
-    "\n",
-    "print(df_pets)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    @petsresgatadosctg3ulbra\\nGALPÃO ULBRA\\nPASTOR...\n",
-       "1    Amora rosto largo, peludinha\\nCom orelhas cara...\n",
-       "2             Ozzy atende pelo nome dele \\nrabo branco\n",
-       "3    _gabrielagaray\\n51 99241 8317\\nSOGIPA\\nBem ido...\n",
-       "4                    Fazer contaro com @ikojardim. SRD\n",
-       "5    Bob é velhinho, deve ter em torno de 14 anos. ...\n",
-       "Name: Descrição do Pet, dtype: object"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_pets.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Salvando o DataFrame em um arquivo Excel\n",
-    "df_pets.to_excel('database.xlsx', index=False)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -216,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Pichau\\AppData\\Local\\Temp\\ipykernel_27092\\2439045566.py:68: DeprecationWarning: The 'text' argument to find()-type methods is deprecated. Use 'string' instead.\n",
+      "C:\\Users\\Pichau\\AppData\\Local\\Temp\\ipykernel_27484\\2439045566.py:68: DeprecationWarning: The 'text' argument to find()-type methods is deprecated. Use 'string' instead.\n",
       "  abrigo_info = soup.find('div', class_='v-list-item-title', text=lambda text: text and text.startswith('Abrigo:'))\n"
      ]
     },
@@ -244,7 +37,7 @@
       "1  Avenida Farroupilha 8001.  https://petsrs.com.br/pet/1839   \n",
       "\n",
       "                                       URL da Imagem  \n",
-      "0  https://d3grcwqt8cmtlx.cloudfront.net/IMG_2023...  \n",
+      "0                                               None  \n",
       "1  https://d3grcwqt8cmtlx.cloudfront.net/Screensh...  \n"
      ]
     }
@@ -329,7 +122,7 @@
     "dados_pets = []\n",
     "\n",
     "# Varrendo os pets\n",
-    "for pet_id in range(1838, 1840):\n",
+    "for pet_id in range(10, 2710):\n",
     "    url_pet = f'https://petsrs.com.br/pet/{pet_id}'\n",
     "    detalhes_pet = extrair_detalhes_pet(url_pet)\n",
     "    dados_pets.append(detalhes_pet)\n",
@@ -342,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +177,7 @@
        "      <td>Não encontrado</td>\n",
        "      <td>Não encontrado</td>\n",
        "      <td>https://petsrs.com.br/pet/1838</td>\n",
-       "      <td>https://d3grcwqt8cmtlx.cloudfront.net/IMG_2023...</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -414,17 +207,27 @@
        "1  Avenida Farroupilha 8001.  https://petsrs.com.br/pet/1839   \n",
        "\n",
        "                                       URL da Imagem  \n",
-       "0  https://d3grcwqt8cmtlx.cloudfront.net/IMG_2023...  \n",
+       "0                                               None  \n",
        "1  https://d3grcwqt8cmtlx.cloudfront.net/Screensh...  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_pets.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Salvando o DataFrame em um arquivo Excel\n",
+    "df_pets.to_excel('database.xlsx', index=False)"
    ]
   }
  ],
