data wrapper first collect

--- a/Notebooks/dev_datawrapper.ipynb
+++ b/Notebooks/dev_datawrapper.ipynb
@@ -9,36 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Pichau\\AppData\\Local\\Temp\\ipykernel_27484\\2439045566.py:68: DeprecationWarning: The 'text' argument to find()-type methods is deprecated. Use 'string' instead.\n",
-      "  abrigo_info = soup.find('div', class_='v-list-item-title', text=lambda text: text and text.startswith('Abrigo:'))\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       Nome do Pet    Status do Pet  \\\n",
-      "0           Barthô     Desaparecido   \n",
-      "1  Procura-se dono  Procura-se dono   \n",
-      "\n",
-      "                                    Descrição do Pet          Abrigo  \\\n",
-      "0  Preto e branco, castrado, em torno de 1 ano e ...  Não encontrado   \n",
-      "1  @petsresgatadosctg3ulbra\\nGALPÃO ULBRA\\nPASTOR...           ULBRA   \n",
-      "\n",
-      "          Endereço do Abrigo                             URL  \\\n",
-      "0             Não encontrado  https://petsrs.com.br/pet/1838   \n",
-      "1  Avenida Farroupilha 8001.  https://petsrs.com.br/pet/1839   \n",
-      "\n",
-      "                                       URL da Imagem  \n",
-      "0                                               None  \n",
-      "1  https://d3grcwqt8cmtlx.cloudfront.net/Screensh...  \n"
+      "Pet ID 1835 salvo com sucesso.\n",
+      "Pet ID 1836 salvo com sucesso.\n"
      ]
     }
    ],
@@ -46,6 +25,9 @@
     "import pandas as pd\n",
     "from selenium import webdriver\n",
     "from bs4 import BeautifulSoup\n",
+    "from openpyxl import Workbook\n",
+    "from openpyxl import load_workbook\n",
+    "import time\n",
     "\n",
     "def extrair_detalhes_pet(url):\n",
     "    # Configuração do Selenium para usar um driver do Chrome\n",
@@ -106,11 +88,39 @@
     "        return img_tag['src']\n",
     "    else:\n",
     "        return None\n",
+    "    \n",
+    "def extrair_url_imagem_timer(url):\n",
+    "    # Configuração do Selenium para usar um driver do Chrome\n",
+    "    options = webdriver.ChromeOptions()\n",
+    "    options.add_argument('--headless')  # Para executar o Chrome em modo headless (sem interface gráfica)\n",
+    "    driver = webdriver.Chrome(options=options)\n",
+    "    \n",
+    "    # Carregar a página\n",
+    "    driver.get(url)\n",
+    "    \n",
+    "    # Esperar por um curto período para permitir o carregamento completo da página\n",
+    "    time.sleep(4)  # Aguarda 1 segundo (você pode ajustar esse valor conforme necessário)\n",
+    "    \n",
+    "    # Obter o código HTML da página após a renderização completa\n",
+    "    page_html = driver.page_source\n",
+    "    \n",
+    "    # Fechar o driver do Selenium\n",
+    "    driver.quit()\n",
+    "    \n",
+    "    # Parsear o HTML com BeautifulSoup\n",
+    "    soup = BeautifulSoup(page_html, 'html.parser')\n",
+    "    \n",
+    "    # Encontrar a tag img com a classe v-img__img e extrair a URL da imagem\n",
+    "    img_tag = soup.find('img', class_='v-img__img')\n",
+    "    if img_tag:\n",
+    "        return img_tag['src']\n",
+    "    else:\n",
+    "        return None\n",
     "\n",
     "def verificar_abrigo(html):\n",
     "    soup = BeautifulSoup(html, 'html.parser')\n",
     "    \n",
-    "    abrigo_info = soup.find('div', class_='v-list-item-title', text=lambda text: text and text.startswith('Abrigo:'))\n",
+    "    abrigo_info = soup.find('div', class_='v-list-item-title', string=lambda string: string and string.startswith('Abrigo:'))\n",
     "    if abrigo_info:\n",
     "        abrigo = abrigo_info.text.strip().replace('Abrigo:', '').strip()\n",
     "        endereco = abrigo_info.find_next('div', class_='v-list-item-subtitle').text.strip()\n",
@@ -118,116 +128,33 @@
     "    \n",
     "    return False, None, None\n",
     "\n",
+    "# Cria ou carrega o arquivo Excel\n",
+    "try:\n",
+    "    wb = load_workbook('databases.xlsx')\n",
+    "except FileNotFoundError:\n",
+    "    wb = Workbook()\n",
+    "    ws = wb.active\n",
+    "    ws.append(['Nome do Pet', 'Status do Pet', 'Descrição do Pet', 'Abrigo', 'Endereço do Abrigo', 'URL', 'URL da Imagem'])\n",
+    "else:\n",
+    "    ws = wb.active\n",
+    "\n",
     "# Lista para armazenar os dados de cada pet\n",
     "dados_pets = []\n",
     "\n",
-    "# Varrendo os pets\n",
-    "for pet_id in range(10, 2710):\n",
+    "# Varrendo os pets 10, 2710\n",
+    "for pet_id in range(1835, 1837):\n",
     "    url_pet = f'https://petsrs.com.br/pet/{pet_id}'\n",
-    "    detalhes_pet = extrair_detalhes_pet(url_pet)\n",
-    "    dados_pets.append(detalhes_pet)\n",
+    "    try:\n",
+    "        detalhes_pet = extrair_detalhes_pet(url_pet)\n",
+    "        dados_pets.append(detalhes_pet)\n",
+    "        ws.append([detalhes_pet['Nome do Pet'], detalhes_pet['Status do Pet'], detalhes_pet['Descrição do Pet'],\n",
+    "                   detalhes_pet['Abrigo'], detalhes_pet['Endereço do Abrigo'], detalhes_pet['URL'], detalhes_pet['URL da Imagem']])\n",
+    "        print(f\"Pet ID {pet_id} salvo com sucesso.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Erro ao salvar pet ID {pet_id}: {str(e)}\")\n",
     "\n",
-    "# Criando DataFrame com os dados dos pets\n",
-    "df_pets = pd.DataFrame(dados_pets)\n",
-    "\n",
-    "print(df_pets)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Nome do Pet</th>\n",
-       "      <th>Status do Pet</th>\n",
-       "      <th>Descrição do Pet</th>\n",
-       "      <th>Abrigo</th>\n",
-       "      <th>Endereço do Abrigo</th>\n",
-       "      <th>URL</th>\n",
-       "      <th>URL da Imagem</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Barthô</td>\n",
-       "      <td>Desaparecido</td>\n",
-       "      <td>Preto e branco, castrado, em torno de 1 ano e ...</td>\n",
-       "      <td>Não encontrado</td>\n",
-       "      <td>Não encontrado</td>\n",
-       "      <td>https://petsrs.com.br/pet/1838</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Procura-se dono</td>\n",
-       "      <td>Procura-se dono</td>\n",
-       "      <td>@petsresgatadosctg3ulbra\\nGALPÃO ULBRA\\nPASTOR...</td>\n",
-       "      <td>ULBRA</td>\n",
-       "      <td>Avenida Farroupilha 8001.</td>\n",
-       "      <td>https://petsrs.com.br/pet/1839</td>\n",
-       "      <td>https://d3grcwqt8cmtlx.cloudfront.net/Screensh...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Nome do Pet    Status do Pet  \\\n",
-       "0           Barthô     Desaparecido   \n",
-       "1  Procura-se dono  Procura-se dono   \n",
-       "\n",
-       "                                    Descrição do Pet          Abrigo  \\\n",
-       "0  Preto e branco, castrado, em torno de 1 ano e ...  Não encontrado   \n",
-       "1  @petsresgatadosctg3ulbra\\nGALPÃO ULBRA\\nPASTOR...           ULBRA   \n",
-       "\n",
-       "          Endereço do Abrigo                             URL  \\\n",
-       "0             Não encontrado  https://petsrs.com.br/pet/1838   \n",
-       "1  Avenida Farroupilha 8001.  https://petsrs.com.br/pet/1839   \n",
-       "\n",
-       "                                       URL da Imagem  \n",
-       "0                                               None  \n",
-       "1  https://d3grcwqt8cmtlx.cloudfront.net/Screensh...  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_pets.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Salvando o DataFrame em um arquivo Excel\n",
-    "df_pets.to_excel('database.xlsx', index=False)"
+    "# Salva as alterações no arquivo Excel\n",
+    "wb.save('databases.xlsx')\n"
    ]
   }
  ],
