--- a/Notebooks/web_scraping.ipynb
+++ b/Notebooks/web_scraping.ipynb
@@ -4,7 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data wrapper"
+    "# Web Scraping"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Este notebook é utilizado para ler os dados da URL https://petsrs.com.br , lá se encontra um banco de dados de pets registrados. Ao clicar em cada item/imagem do pet no site é direcionado aos detalhes do pet (https://petsrs.com.br/pet/10), onde, 10 é o id do pet. Dentro dos detalhes tem o nome, status, abrigo, detalhes e URL da imagem do pet. Este notebook, performa um loop do id 1000 ao 2710 e extrai estas informações e salva localmente em um .xlsx.\n",
+    "\n",
+    "Alguns detalhes mudam e as vezes vem valores inválidos, o xlsx resultante final deve ser limpo. \n",
+    "A ideia é usar as URL dos pets e baixa-las. Unir com as demais informações, limpar o dataset e iniciar o treinamento dos modelos de IA."
    ]
   },
   {
