checkpoint train model

--- a/Notebooks/train_model.ipynb
+++ b/Notebooks/train_model.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Usar um modelo pre-treinado para encontrar por similaridade no banco"
+    "## Approach 1. Usar um modelo pre-treinado para encontrar por similaridade no banco"
    ]
   },
   {
@@ -595,11 +595,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Apesar de encontrar a mesma imagem que esta no banco, não possui robustez para outras fotos novas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Approach 2. Treinar do zero"
+   ]
   }
  ],
  "metadata": {
