--- a/Notebooks/train_model.ipynb
+++ b/Notebooks/train_model.ipynb
@@ -4,6 +4,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 1. data augmentation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator, load_img, img_to_array\n",
+    "import os\n",
+    "\n",
+    "# Diretório contendo as imagens originais\n",
+    "original_dir = 'imagens'\n",
+    "\n",
+    "# Diretório para salvar as imagens aumentadas\n",
+    "augmented_dir = 'imagens_aumentadas'\n",
+    "\n",
+    "# Criar o diretório se não existir\n",
+    "if not os.path.exists(augmented_dir):\n",
+    "    os.makedirs(augmented_dir)\n",
+    "\n",
+    "# Configurar o ImageDataGenerator para aplicar as técnicas de data augmentation desejadas\n",
+    "datagen = ImageDataGenerator(\n",
+    "    rotation_range=20,      # Rotacionar a imagem aleatoriamente no intervalo de -20 a 20 graus\n",
+    "    width_shift_range=0.1,  # Mover a imagem horizontalmente aleatoriamente em até 10% da largura\n",
+    "    height_shift_range=0.1, # Mover a imagem verticalmente aleatoriamente em até 10% da altura\n",
+    "    shear_range=0.2,        # Aplicar cisalhamento aleatório\n",
+    "    zoom_range=0.2,         # Aplicar zoom aleatório\n",
+    "    horizontal_flip=True,   # Virar horizontalmente aleatoriamente\n",
+    "    fill_mode='nearest'     # Preencher pixels gerados devido à rotação ou ao deslocamento\n",
+    ")\n",
+    "\n",
+    "# Obter a lista de nomes de arquivos das imagens originais\n",
+    "original_image_files = os.listdir(original_dir)\n",
+    "\n",
+    "# Para cada imagem original, gerar 5 imagens aumentadas\n",
+    "for filename in original_image_files:\n",
+    "    # Carregar a imagem original\n",
+    "    image_path = os.path.join(original_dir, filename)\n",
+    "    img = load_img(image_path)\n",
+    "    x = img_to_array(img)\n",
+    "    x = x.reshape((1,) + x.shape)  # Reshape para que o gerador de imagem possa processar\n",
+    "\n",
+    "    # Configurar um índice para o nome dos arquivos aumentados\n",
+    "    idx = 0\n",
+    "\n",
+    "    # Gerar e salvar 5 imagens aumentadas\n",
+    "    for batch in datagen.flow(x, batch_size=1, save_to_dir=augmented_dir, save_prefix=filename[:-4]+'_aug_', save_format='jpg'):\n",
+    "        idx += 1\n",
+    "        if idx >= 5:  # Número desejado de imagens aumentadas por imagem original\n",
+    "            break\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Approach 1. Usar um modelo pre-treinado para encontrar por similaridade no banco"
    ]
   },
@@ -2515,68 +2573,97 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Apesar de encontrar a mesma imagem que esta no banco, não possui robustez para outras fotos novas"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Melhoria do approach 1. data augmentation"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow.keras.preprocessing.image import ImageDataGenerator, load_img, img_to_array\n",
     "import os\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.applications import MobileNetV2\n",
+    "from tensorflow.keras.applications.mobilenet_v2 import preprocess_input\n",
+    "from tensorflow.keras.preprocessing.image import img_to_array\n",
+    "from tensorflow.keras.models import Model\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "from PIL import Image\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Diretório contendo as imagens originais\n",
-    "original_dir = 'imagens'\n",
+    "# Função para carregar e pré-processar imagens\n",
+    "def load_and_preprocess_image(image_path, target_size=(224, 224)):\n",
+    "    if not os.path.exists(image_path):\n",
+    "        raise FileNotFoundError(f\"Arquivo não encontrado: {image_path}\")\n",
+    "    print(\"Carregando imagem:\", image_path)  # Adicionando instrução de impressão\n",
+    "    \n",
+    "    # Carregar a imagem com Pillow\n",
+    "    with Image.open(image_path) as img:\n",
+    "        image = np.array(img)\n",
+    "    \n",
+    "    if image is None:\n",
+    "        raise ValueError(f\"Erro ao ler a imagem: {image_path}\")\n",
+    "    \n",
+    "    # Converter para RGB se necessário\n",
+    "    if len(image.shape) == 2:\n",
+    "        image = cv2.cvtColor(image, cv2.COLOR_GRAY2RGB)\n",
+    "    elif image.shape[2] == 4:\n",
+    "        image = cv2.cvtColor(image, cv2.COLOR_RGBA2RGB)\n",
+    "    else:\n",
+    "        image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
+    "    \n",
+    "    # Redimensionar a imagem\n",
+    "    image = cv2.resize(image, target_size)\n",
+    "    \n",
+    "    # Pré-processamento final\n",
+    "    image = img_to_array(image)\n",
+    "    image = preprocess_input(image)\n",
+    "    \n",
+    "    return image\n",
     "\n",
-    "# Diretório para salvar as imagens aumentadas\n",
-    "augmented_dir = 'imagens_aumentadas'\n",
+    "# Função para extrair características de uma imagem usando MobileNetV2\n",
+    "def extract_features(image_path, model):\n",
+    "    image = load_and_preprocess_image(image_path)\n",
+    "    features = model.predict(np.expand_dims(image, axis=0))\n",
+    "    return features.flatten()\n",
     "\n",
-    "# Criar o diretório se não existir\n",
-    "if not os.path.exists(augmented_dir):\n",
-    "    os.makedirs(augmented_dir)\n",
+    "# Carregar o modelo MobileNetV2 pré-treinado\n",
+    "base_model = MobileNetV2(weights='imagenet', include_top=False, input_shape=(224, 224, 3))\n",
     "\n",
-    "# Configurar o ImageDataGenerator para aplicar as técnicas de data augmentation desejadas\n",
-    "datagen = ImageDataGenerator(\n",
-    "    rotation_range=20,      # Rotacionar a imagem aleatoriamente no intervalo de -20 a 20 graus\n",
-    "    width_shift_range=0.1,  # Mover a imagem horizontalmente aleatoriamente em até 10% da largura\n",
-    "    height_shift_range=0.1, # Mover a imagem verticalmente aleatoriamente em até 10% da altura\n",
-    "    shear_range=0.2,        # Aplicar cisalhamento aleatório\n",
-    "    zoom_range=0.2,         # Aplicar zoom aleatório\n",
-    "    horizontal_flip=True,   # Virar horizontalmente aleatoriamente\n",
-    "    fill_mode='nearest'     # Preencher pixels gerados devido à rotação ou ao deslocamento\n",
-    ")\n",
+    "# Carregar imagens de pets e extrair características\n",
+    "pet_features = []\n",
+    "pet_files = []\n",
+    "for file in os.listdir('imagens'):\n",
+    "    if file.endswith('.jpg') or file.endswith('.jpeg') or file.endswith('.png'):\n",
+    "        file_path = os.path.join('imagens', file)\n",
+    "        pet_files.append(file)\n",
+    "        features = extract_features(file_path, base_model)\n",
+    "        pet_features.append(features)\n",
     "\n",
-    "# Obter a lista de nomes de arquivos das imagens originais\n",
-    "original_image_files = os.listdir(original_dir)\n",
+    "# Convertendo a lista de características em matriz\n",
+    "pet_features = np.array(pet_features)\n",
     "\n",
-    "# Para cada imagem original, gerar 5 imagens aumentadas\n",
-    "for filename in original_image_files:\n",
-    "    # Carregar a imagem original\n",
-    "    image_path = os.path.join(original_dir, filename)\n",
-    "    img = load_img(image_path)\n",
-    "    x = img_to_array(img)\n",
-    "    x = x.reshape((1,) + x.shape)  # Reshape para que o gerador de imagem possa processar\n",
+    "# Função para encontrar o pet mais semelhante\n",
+    "def find_most_similar_pet(image_path, pet_features, pet_files, base_model):\n",
+    "    query_features = extract_features(image_path, base_model)\n",
+    "    similarities = cosine_similarity([query_features], pet_features)\n",
+    "    most_similar_indices = similarities.argsort()[0][-5:][::-1]\n",
+    "    return [pet_files[i] for i in most_similar_indices]\n",
     "\n",
-    "    # Configurar um índice para o nome dos arquivos aumentados\n",
-    "    idx = 0\n",
+    "# Testar com uma imagem de exemplo\n",
+    "query_image_path = r'C:\\Users\\Pichau\\Downloads\\gato.jpg'\n",
+    "most_similar_pets = find_most_similar_pet(query_image_path, pet_features, pet_files, base_model)\n",
     "\n",
-    "    # Gerar e salvar 5 imagens aumentadas\n",
-    "    for batch in datagen.flow(x, batch_size=1, save_to_dir=augmented_dir, save_prefix=filename[:-4]+'_aug_', save_format='jpg'):\n",
-    "        idx += 1\n",
-    "        if idx >= 5:  # Número desejado de imagens aumentadas por imagem original\n",
-    "            break\n"
+    "# Exibir as imagens e os nomes dos pets mais similares\n",
+    "for i, pet_file in enumerate(most_similar_pets):\n",
+    "    # Carregar e exibir a imagem\n",
+    "    pet_image = plt.imread(os.path.join('imagens', pet_file))\n",
+    "    plt.subplot(1, 5, i + 1)\n",
+    "    plt.imshow(pet_image)\n",
+    "    plt.axis('off')\n",
+    "    plt.title(\"Pet \" + str(i + 1))\n",
+    "\n",
+    "plt.show()\n",
+    "print(\"Os 5 pets mais similares são:\", most_similar_pets)\n"
    ]
   }
  ],
