testing scrap instagram

--- a/Notebooks/test_features.ipynb
+++ b/Notebooks/test_features.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -26,6 +26,7 @@
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "import csv\n",
     "import chardet\n",
+    "import re\n",
     "\n",
     "\n",
     "# Carregar o modelo MobileNetV2 pré-treinado\n",
@@ -42,11 +43,11 @@
     "    return encoding\n",
     "\n",
     "# Carregar características dos pets a partir do arquivo CSV\n",
-    "pet_features = np.loadtxt('pet_features.csv', delimiter=',')\n",
+    "pet_features = np.loadtxt('pet_features_insta.csv', delimiter=',')\n",
     "print(\"pet_features carregadas com sucesso.\")\n",
     "\n",
     "# Carregar informações dos arquivos dos pets a partir do arquivo CSV\n",
-    "pet_files_path = 'pet_files.csv'\n",
+    "pet_files_path = 'pet_files_insta.csv'\n",
     "csv_encoding = detect_encoding(pet_files_path)\n",
     "with open(pet_files_path, 'r', encoding=csv_encoding) as csvfile:\n",
     "    reader = csv.reader(csvfile)\n",
@@ -72,7 +73,25 @@
     "        url = f\"https://petsrs.com.br/pet/{id_number}\"\n",
     "        formatted_most_similar_files.append(url)\n",
     "\n",
-    "    return formatted_most_similar_files"
+    "    return formatted_most_similar_files\n",
+    "\n",
+    "\n",
+    "# Função para encontrar o pet mais semelhante insta\n",
+    "def find_most_similar_pet_insta(query_features):\n",
+    "    similarities = cosine_similarity([query_features], pet_features)\n",
+    "    most_similar_indices = similarities.argsort()[0][-20:][::-1]\n",
+    "    most_similar_files = [pet_files[i] for i in most_similar_indices]\n",
+    "\n",
+    "    # Formatar os nomes dos arquivos\n",
+    "    formatted_most_similar_files = []\n",
+    "    for file in most_similar_files:\n",
+    "        # Extrair o termo após \"insta\" e remover o número no final\n",
+    "        match = re.search(r'insta_(.+?)_\\d+', file)\n",
+    "        if match:\n",
+    "            term = match.group(1)\n",
+    "            formatted_most_similar_files.append(term)\n",
+    "\n",
+    "    return formatted_most_similar_files\n"
    ]
   },
   {
@@ -90,13 +109,38 @@
     }
    ],
    "source": [
-    "# Testar com uma imagem de exemplo\n",
+    "# Testar com uma imagem de exemplo petrs\n",
     "query_image_path = r'C:\\Users\\Pichau\\Downloads\\gato.jpg'\n",
     "img = Image.open(query_image_path).resize((224, 224))\n",
     "img = np.array(img)\n",
     "img = preprocess_input(img)\n",
     "query_features = base_model.predict(np.expand_dims(img, axis=0)).flatten()\n",
     "most_similar_pets = find_most_similar_pet(query_features)\n",
+    "print(\"Pet similares:\", most_similar_pets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 1s/step\n",
+      "Pet similares: ['pets_resgatados.rs', 'pets_resgatados.rs', 'pets_resgatados.rs', 'pets_resgatados.rs', 'animaisresgatadosmathias', 'pets_resgatados.rs', 'acheseudogulbra', 'canoas.enchente.pets', 'pets_resgatados.rs', 'acheseudogulbra', 'acheseudogulbra', 'pets_resgatados.rs', 'pets_resgatados.rs', 'pets_resgatados.rs', 'acheseudogulbra', 'canoas.enchente.pets', 'acheseudogulbra', 'pets_resgatados.rs', 'pets_resgatados.rs', 'animaisresgatadosmathias']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Testar com uma imagem de exemplo insta\n",
+    "query_image_path = r'C:\\Users\\Pichau\\Downloads\\gato.jpg'\n",
+    "img = Image.open(query_image_path).resize((224, 224))\n",
+    "img = np.array(img)\n",
+    "img = preprocess_input(img)\n",
+    "query_features = base_model.predict(np.expand_dims(img, axis=0)).flatten()\n",
+    "most_similar_pets = find_most_similar_pet_insta(query_features)\n",
     "print(\"Pet similares:\", most_similar_pets)"
    ]
   }
